--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
 migrateup:
-	migrate -path db/migrations -database "postgresql://postgres:postgres@localhost:5433/go-chat?sslmode=disable" -verbose up
+	migrate -path db/migrations -database "postgresURL" -verbose up
 migratedown:
-	migrate -path db/migrations -database "postgresql://postgres:postgres@localhost:5433/go-chat?sslmode=disable" -verbose down
+	migrate -path db/migrations -database "postgresURL" -verbose down
